--- a/1.in
+++ b/1.in
@@ -1,36 +1,29 @@
 su root sjtu
-useradd worker worker_password 3 King-Bailey
+useradd worker0 worker0_password 3 LouisClark
 logout
-su worker worker_password
-select 9787559609303
-modify -ISBN=9787559609304
-modify -name="DavisandSons"
-modify -name="Thompson-Patrick"
-select 9787559609304
-modify -keyword="Stephens-Moore|WilkinsLLC" -price=50 -author="Weaver-Moreno"
-modify -price=49.8
-select 9787544287722
-modify -name="McclainLLC" -keyword="RogersGroup|OconnorandSons" -author="Atkins-Summers" -price=45.00
+su worker0 worker0_password
+useradd user0 user0_password 1 SusanRyan
 logout
-register user user_password Griffin,RamirezandRobinson
-su user user_password
-show -ISBN=9787559609303
-show -ISBN=9787559609304
-show -name="Day-Cummings"
-show -name="Thompson-Patrick"
-show -author="Weaver-Moreno"
+register user1 user1_password DavidGalvan
+su user0 user0_password
 logout
-su worker worker_password
-select 9787559410443
-modify -name="FoxInc" -keyword="RogersGroup|Irwin-Atkinson" -author="Anderson-Yang" -price=38
-import 5 50
-select 9787559609304
-import 10 100
-select 9787544287722
-import 15 150
-show -name="Rodriguez,BakerandMartinez"
-show -name="Thompson-Patrick"
-show -keyword="RogersGroup"
-show
+su user1 user1_password
+logout
+su root sjtu
+useradd worker1 worker1_password 3 ErinRodriguez
+useradd user2 user2_password 1 DavidRobinson
+logout
+register user3 user3_password LawrenceMorris
+su user2 user2_password
+logout
+su user3 user3_password
+logout
+su worker1 worker1_password
+useradd user4 user4_password 1 YeseniaBurns
+logout
+register user5 user5_password KathleenJackson
+su user4 user4_password
+logout
+su user5 user5_password
 logout
 exit
