fixed the bugs in finance show

--- a/1.in
+++ b/1.in
@@ -1,29 +1,38 @@
 su root sjtu
-useradd worker0 worker0_password 3 LouisClark
+useradd worker worker_password 3 Liu,TaylorandStewart
+select 9787544287722
+modify -name="Phillips,HallandWelch" -keyword="KlinePLC|GoldenInc" -author="SantiagoPLC" -price=45.00
+select 9787559410443
+modify -name="GonzalesLLC" -keyword="KlinePLC|SuttonPLC" -author="HunterLtd" -price=38
 logout
-su worker0 worker0_password
-useradd user0 user0_password 1 SusanRyan
+su worker worker_password
+select 9787559410443
+import 48 233.33
+select 9787544287722
+import 15 150
 logout
-register user1 user1_password DavidGalvan
-su user0 user0_password
+register user0 user0_password Dalton-Schwartz
+su user0 user0_password 
+buy 9787559410443 5 
+buy 9787544287722 3
 logout
-su user1 user1_password
+su worker worker_password 
+buy 9787559410443 20
+select 9787559410443
+import 20 200
+select 9787544287722
+import 3 30
+buy 9787544287722 5
 logout
-su root sjtu
-useradd worker1 worker1_password 3 ErinRodriguez
-useradd user2 user2_password 1 DavidRobinson
-logout
-register user3 user3_password LawrenceMorris
-su user2 user2_password
-logout
-su user3 user3_password
-logout
-su worker1 worker1_password
-useradd user4 user4_password 1 YeseniaBurns
-logout
-register user5 user5_password KathleenJackson
-su user4 user4_password
-logout
-su user5 user5_password
+su root sjtu 
+buy 9787544287722 1
+select 9787544287722
+import 20 200.00
+show finance
+show finance 1
+show finance 3
+show finance 5
+show finance 10
+show
 logout
 exit
